--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<hmtl lang="pt-br">
- <head>
-  <meta charset="UTF-8">
-  <title>Barbearia Alura</title>
- </head>
- 
- <body>
-   <h1>Sobre  a Barbearia Alura</h1>
+<html lang=”pt-br”>
 
-   <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p> 
+  <head>
+    <meta charset=”UTF-8”>	
+    <title>Barbearia Alura</title>
+     <link rel="stylesheet" href= "style.css">
+  </head>
 
-   <p><strong> Nossa missão é: <em>"Proporcionar auto-estima e qualidade de vida aos clientes".<em></strong></p>
+  <body>
+     <h1>Sobre a Barbearia Alura</h1>
 
-   <p> Oferecemos profissionais experientes e antenados as mudanças no mundo da moda. O atendimento possui padrão de excelência e aglidade, garantindo qualidade e satisfação dos nossos clientes.</p> 
- </body>
+     <p style="font-size: 20px" >Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+     <p><strong>Nossa missão é: <em>"Proporcionar auto-estima e qualidade de vida aos clientes".</em></strong></p>
+
+     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+  </body>
 </html>
